--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage":"https://github.com/Ifushsh/tk.github.io/",
+  "homepage":"https://tk.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
@@ -17,7 +17,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "deploy":"gh-pages-clean gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
