--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage":"https://Ifushsh.github.io/",
+  "homepage":"./",
   "private": false,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
